[project]
name = "payments-ledger-engine"
version = "0.1.0"
description = "Production-like payments ledger with idempotency and versioned cache."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.17.2",
  "psycopg>=3.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
